<resources>
  <string name="app_name">GastoViagem</string>
  <string name="distance">Distância</string>
  <string name="total_distance">Total de quilômetros</string>
  <string name="price">Preço</string>
  <string name="price_per_liter">Preço por litro</string>
  <string name="km_autonomy">KMs por litro</string>
  <string name="autonomy">Autonomia</string>
  <string name="total_expense">seu gasto total será de:</string>
  <string name="calculate">calcular</string>
  <string name="total_value">R$ 0</string>

  <string name="validate_fill_all_fields">Preencha todos os campos!</string>
</resources>