<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

  <EditText
      android:id="@+id/edit_distance"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/distance"
      android:inputType="number" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="24dp"
      android:text="@string/total_distance" />

  <EditText
      android:id="@+id/edit_price"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/price"
      android:inputType="numberDecimal" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="24dp"
      android:text="@string/price_per_liter" />

  <EditText
      android:id="@+id/edit_autonomy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/autonomy"
      android:inputType="numberDecimal" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="32dp"
      android:text="@string/km_autonomy" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="16dp"
      android:text="@string/total_expense"
      android:textAllCaps="true"
      android:textSize="18sp" />

  <TextView
      android:id="@+id/text_total_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="24dp"
      android:text="@string/total_value"
      android:textAllCaps="true"
      android:textColor="@color/purple"
      android:textSize="32sp" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/button_calculate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/green"
      android:paddingVertical="12dp"
      android:text="@string/calculate"
      android:textAllCaps="true"
      android:textSize="18sp"
      app:cornerRadius="4dp" />


</LinearLayout>